[gd_scene load_steps=18 format=3 uid="uid://b0qt8n6gbxlat"]

[ext_resource type="Script" path="res://main.gd" id="1_nu5bv"]
[ext_resource type="PackedScene" uid="uid://bnjd3xnekunev" path="res://Entities/Cats/cat_miner.tscn" id="2_ma2mg"]
[ext_resource type="PackedScene" uid="uid://b6lwml3cddh7x" path="res://Buildings/storage.tscn" id="2_pq0lw"]
[ext_resource type="PackedScene" uid="uid://b4a73ga7o86ma" path="res://Buildings/mine.tscn" id="3_uhm5x"]
[ext_resource type="PackedScene" uid="uid://dpjedk5o7w8rk" path="res://UI/shop.tscn" id="5_qrleq"]
[ext_resource type="PackedScene" uid="uid://dudgniskyxns2" path="res://UI/dry_food_counter.tscn" id="5_tmh1l"]
[ext_resource type="PackedScene" uid="uid://jhvlp31g8mfa" path="res://Entities/Aliens/alien_spawn_point.tscn" id="6_5s6oa"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="7_ive38"]
[ext_resource type="Script" path="res://camera_target.gd" id="7_y0ugt"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2D.gd" id="8_gjqs2"]
[ext_resource type="Script" path="res://altar_preview.gd" id="11_dympo"]
[ext_resource type="PackedScene" uid="uid://dvkmdffpxno1h" path="res://Entities/Aliens/alien_clustor.tscn" id="12_w2cdb"]
[ext_resource type="PackedScene" uid="uid://k4dw8byq2a8i" path="res://UI/game_over.tscn" id="13_766qe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxcq8"]

[sub_resource type="Gradient" id="Gradient_suikg"]
offsets = PackedFloat32Array(0, 0.996169)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cdnfs"]
gradient = SubResource("Gradient_suikg")

[sub_resource type="Environment" id="Environment_ebfxl"]
background_mode = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_nu5bv")

[node name="Storage" parent="." instance=ExtResource("2_pq0lw")]
position = Vector2(585, 342)

[node name="Mines" type="Node" parent="."]
unique_name_in_owner = true

[node name="Mine" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(4408, -635)

[node name="Mine2" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(-1719, -453)

[node name="Mine3" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(1886, 1801)

[node name="Mine4" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(-534, 1970)

[node name="Mine5" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(2543, 577)

[node name="Mine6" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(64, -36)

[node name="Mine7" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(-549, -707)

[node name="Mine8" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(1435, -418)

[node name="Mine9" parent="Mines" instance=ExtResource("3_uhm5x")]
position = Vector2(-757, 307)

[node name="Cats" type="Node" parent="."]
unique_name_in_owner = true

[node name="CatMiner" parent="Cats" instance=ExtResource("2_ma2mg")]
position = Vector2(118, 416)

[node name="CatMiner2" parent="Cats" instance=ExtResource("2_ma2mg")]
position = Vector2(230, 414)

[node name="CatMiner3" parent="Cats" instance=ExtResource("2_ma2mg")]
position = Vector2(194, 342)

[node name="Altars" type="Node" parent="."]
unique_name_in_owner = true

[node name="Aliens" type="Node" parent="."]
unique_name_in_owner = true

[node name="AlienClustor13" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(961, -890)

[node name="AlienClustor12" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(2843, -710)

[node name="AlienClustor11" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(3227, -381)

[node name="AlienClustor10" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(2891, 27)

[node name="AlienClustor9" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(2076, -429)

[node name="AlienClustor8" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(2603, -285)

[node name="AlienClustor7" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(2160, 51)

[node name="AlienClustor6" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(1716, 1040)

[node name="AlienClustor5" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(1406, 1549)

[node name="AlienClustor4" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(2196, 1202)

[node name="AlienClustor14" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(-77, 1397)

[node name="AlienClustor3" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(-663, 1190)

[node name="AlienClustor15" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(-1269, 266)

[node name="AlienClustor2" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(-1111, -387)

[node name="AlienClustor" parent="Aliens" instance=ExtResource("12_w2cdb")]
position = Vector2(425, -701)

[node name="AlienSpawnPoints" type="Node" parent="."]
unique_name_in_owner = true

[node name="AlienSpawnPoint3" parent="AlienSpawnPoints" instance=ExtResource("6_5s6oa")]
position = Vector2(1544, -1427)
scale = Vector2(0.760799, 0.760799)

[node name="AlienSpawnPoint2" parent="AlienSpawnPoints" instance=ExtResource("6_5s6oa")]
position = Vector2(941, 2574)
scale = Vector2(0.64, 0.64)

[node name="AlienSpawnPoint5" parent="AlienSpawnPoints" instance=ExtResource("6_5s6oa")]
position = Vector2(3517, 957)
scale = Vector2(0.4096, 0.4096)

[node name="AlienSpawnPoint4" parent="AlienSpawnPoints" instance=ExtResource("6_5s6oa")]
position = Vector2(-1570, 1241)
scale = Vector2(0.64, 0.64)

[node name="AlienSpawnPoint" parent="AlienSpawnPoints" instance=ExtResource("6_5s6oa")]
position = Vector2(-632, -1438)

[node name="Projectiles" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(565, 317)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("7_ive38")

[node name="CameraMain" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(565, 317)
script = ExtResource("8_gjqs2")
priority_override = false
priority = 0
zoom = Vector2(1, 1)
follow_mode = 1
follow_target = NodePath("../CameraTarget")
follow_parameters/damping = true
follow_parameters/damping_value = 20.0
frame_preview = true
pixel_perfect = false
limit/draw_limits = false
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/limit_node_target = NodePath("")
limit/smoothed = false
tween_parameters = null
tween_on_load = true
inactive_update_mode = 0

[node name="CameraTarget" type="Node2D" parent="."]
position = Vector2(565, 317)
script = ExtResource("7_y0ugt")

[node name="AltarPreview" type="Sprite2D" parent="."]
unique_name_in_owner = true
script = ExtResource("11_dympo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -97.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gxcq8")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25

[node name="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer" instance=ExtResource("5_tmh1l")]
layout_mode = 2

[node name="Shop" parent="CanvasLayer" instance=ExtResource("5_qrleq")]
size_flags_vertical = 8
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_cdnfs")
metadata/_edit_lock_ = true

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("13_766qe")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ebfxl")

[node name="TimerSpawnAlien" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="altar_bought" from="CanvasLayer/Shop" to="." method="_on_shop_altar_bought"]
[connection signal="timeout" from="TimerSpawnAlien" to="." method="_on_timer_spawn_alien_timeout"]
